--- a/layouts/partials/google-fonts.html
+++ b/layouts/partials/google-fonts.html
@@ -1,5 +1,4 @@
 {{ with .Site.Params.fonts.google_fonts }}
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="{{ . }}" rel="stylesheet">
+<link href="/fonts/fonts.css" rel="stylesheet">
+<link href="{{ . }}" rel="stylesheet">
 {{ end }}
